# easy_sol

./: .gitignore  deno.json  index.ts  main.ts  scripts.sh
anchor/: Anchor.toml  Cargo.toml  anchor_scripts.sh  deps.txt
anchor/programs/tokens/: Cargo.toml
anchor/programs/tokens/src/: data.rs  lib.rs  minter.rs  program_accounts.rs
anchor/tests/: Cargo.toml
anchor/tests/src/: lib.rs  test_tokens.rs
anchor/tests/src/shared/: constants.rs
clients/calculator/: index.ts
clients/calculator/constants/: index.ts
clients/calculator/enums/: index.ts
clients/calculator/models/: index.ts
clients/tokens/: index.ts
clients/tokens/json_metadata/: fungible-asset.json  fungible.json  non-fungible.json
clients/tokens/models/: index.ts
clients/transfer_sol/: index.ts
clients/transfer_sol/functions/: index.ts
clients/transfer_sol/models/: index.ts
contracts/: Anchor.toml  Cargo.toml
contracts/calculator/: Cargo.toml
contracts/calculator/src/: calculator.rs  lib.rs
contracts/hello_solana/: Cargo.toml
contracts/hello_solana/src/: lib.rs
contracts/mint/: Cargo.toml
contracts/tokens/: Cargo.toml
contracts/tokens/src/: data.rs  lib.rs  minter.rs
contracts/tokens_anchor/: Cargo.toml
contracts/tokens_anchor/src/: data.rs  lib.rs  minter.rs  program_accounts.rs
contracts/transfer_sol/: Cargo.toml
contracts/transfer_sol/src/: lib.rs
shared/: models.ts
shared/constants/: index.ts
shared/enums/: index.ts
shared/functions/: index.ts
shared/interfaces/: index.ts
vanilla/: .gitignore  deno.json  main.ts  scripts.sh
vanilla/clients/calculator/models/: index.ts
vanilla/clients/hello_solana/: index.ts
vanilla/clients/tokens/json_metadata/: fungible.json
vanilla/clients/tokens_anchor/: index.ts
vanilla/contracts/: Cargo.toml
vanilla/contracts/calculator/: Cargo.toml
vanilla/contracts/hello_solana/: Cargo.toml
vanilla/contracts/tokens/: Cargo.toml
vanilla/contracts/tokens/src/: lib.rs
vanilla/contracts/transfer_sol/: Cargo.toml
vanilla/shared/enums/: index.ts
vanilla/shared/functions/: index.ts  vanilla.ts
vanilla/shared/interfaces/: index.ts
