[workspace]
members = ["programs/*", "tests"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
borsh = "0.10.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


