cargo-features = ["edition2024"]

[workspace]
members = ["hello_solana", "calculator", "transfer_sol", "tokens", "tokens_anchor"]
resolver = "3"

[workspace.dependencies]
borsh = "0.10.3"
borsh-derive = "1.5.5"
solana-program = "2.2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
mpl-token-metadata = "5.1.0"
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
