cargo-features = ["edition2024"]

[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { workspace = true }
borsh-derive = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]
