cargo-features = ["edition2024"]

[package]
name = "mint_nft"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = [
  "no-entrypoint",
] }

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]
