[package]
name = "tokens_anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokens_anchor"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
cpi = ["no-entrypoint"]
custom-heap = []


[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["metadata"] }
mpl-token-metadata = { workspace = true }
borsh = { workspace = true }
